fix so that social now vertically centers on mobile view

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -15,6 +15,7 @@
 
 .social {
   text-align: right;
+  margin: auto 0;
 }
 
 .social a {
